traefik-ingress/happy-compute-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  happy-compute-ingress
  namespace: default
  annotations:
   cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
   - hosts:
       - umami.happycloudcomputing.com
       - rapidbay.happycloudcomputing.com
       - jackett.happycloudcomputing.com
       - qbit.happycloudcomputing.com
       - browser.happycloudcomputing.com
       - penpot.happycloudcomputing.com
       - nodered.happycloudcomputing.com  
       - pinnwand.happycloudcomputing.com
       - errorpages.happycloudcomputing.com
       - pihole.happycloudcomputing.com
       - vaultwarden.happycloudcomputing.com
       - neko.happycloudcomputing.com
       - ibga.happycloudcomputing.com
       - glances.happycloudcomputing.com
       - photoprism.happycloudcomputing.com
       - activepc.happycloudcomputing.com
       - flame.happycloudcomputing.com
       - llama.happycloudcomputing.com
       - gitea.happycloudcomputing.com
       - codeserver.happycloudcomputing.com
       - etherpad.happycloudcomputing.com 
     secretName: happy-tls-secret
  rules:
  - host: umami.happycloudcomputing.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: charts-testing-01-umami
            port:
              number: 3000

  - host: rapidbay.happycloudcomputing.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: charts-testing-01-rapidbay
            port:
              number: 5000

  - host: jackett.happycloudcomputing.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: charts-testing-01-jackett
            port:
              number: 9117

  - host: qbit.happycloudcomputing.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: charts-testing-01-qbittorrent-webui
            port:
              number: 8080

  - host: browser.happycloudcomputing.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: charts-testing-01-browserless-chrome
            port:
              number: 10194
 
  - host: penpot.happycloudcomputing.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: penpot-frontend
            port:
              number: 9001

  - host: nodered.happycloudcomputing.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: charts-testing-01-node-red
            port:
              number: 1880

  - host: pinnwand.happycloudcomputing.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: charts-testing-01-pinnwand
            port:
              number: 8000

  - host: errorpages.happycloudcomputing.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: charts-testing-01-error-pages
            port:
              number: 8080

  - host: pihole.happycloudcomputing.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: charts-testing-01-pihole-web
            port:
              number: 80

  - host: vaultwarden.happycloudcomputing.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: charts-testing-01-vaultwarden
            port:
              number: 8080

  - host: photoprism.happycloudcomputing.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: charts-testing-01-photoprism
            port:
              number: 2342

  - host: glances.happycloudcomputing.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: charts-testing-01-glances
            port:
              number: 61208

  - host: ibga.happycloudcomputing.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: charts-testing-01-ibga
            port:
              number: 5800

  - host: activepc.happycloudcomputing.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: active-pieces-activepieces
            port:
              number: 80

  - host: flame.happycloudcomputing.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: charts-testing-01-flame
            port:
              number: 10291

  - host: llama.happycloudcomputing.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: charts-testing-01-llama-webui
            port:
              number: 8080

  - host: gitea.happycloudcomputing.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: charts-testing-01-gitea-http
            port:
              number: 3000

  - host: codeserver.happycloudcomputing.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: charts-testing-01-code-server
            port:
              number: 8443

  - host: etherpad.happycloudcomputing.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: charts-testing-01-etherpad
            port:
              number: 9001

  - host: neko.happycloudcomputing.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: neko
            port:
              number: 10294
